--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.app.gameActivity">
+        </activity>
+
+        <activity
+            android:name="com.example.app.settingsActivity">
+        </activity>
+
+
     </application>
 
 </manifest>
