Beta versie volledige werkend, zonder highscore view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name="com.example.app.settingsActivity">
         </activity>
 
+        <activity
+            android:name="com.example.app.highscoreActivity">
+        </activity>
+
 
     </application>
 
